# gitdemo

./: README.md  print "hello python"
android/ARouter-master/: build.gradle
android/ARouterDemo/: build.gradle
android/ActivityTemple-master/: README.md  globals.xml.ftl  recipe.xml.ftl  recipe_contact.xml.ftl  recipe_fragment.xml.ftl  recipe_presenter.xml.ftl  recipe_view.xml.ftl  template.xml
android/Apodemo2/: build.gradle
android/BookPage-master/: local.properties
android/Chapter01-master/: 80c8e669-3581-4ab2-2cc86ea6-1e571ce6.dmp
android/CostTime-master/: build.gradle
android/DateScroller-master/: build.gradle
android/KotlinDemo/: build.gradle
android/LeakDemo/: build.gradle
android/MyApplication2/: build.gradle
android/NuwaDemo/: build.gradle
android/PerformanceDemo/: build.gradle  settings.gradle  syspub.sh
android/PerformanceDemo/timetrace/src/main/cpp/: ATraceLogger.cpp  CMakeLists.txt  ThreadHook.cpp
android/PerformanceDemo/timetrace/src/main/cpp/linker/: CMakeLists.txt
android/PluginDemo2/: build.gradle  ggg.jks  settings.gradle
android/RoomDemo/: build.gradle
android/SMS302-master/: README.md
android/XDemo/: local.properties
android/aopdemo/: build.gradle
android/asm-master/: local.properties
android/banner_package-master/: .flutter-plugins  README.md  pubspec.yaml
android/demo/: build.gradle
android/flutter_app/: pubspec.yaml
android/flutter_boss/: README.md  pubspec.yaml
android/flutter_dada/: pubspec.yaml
c/: Simple.c  text.txt
c/Test/: Test.depend  Test.layout  write  (+2 more)
other/: shadow.sh
python/: test.sh
(+903 files in other folders)
